devel
-----

* Show peak memory usage in AQL query profiling output.

* Micro improvements for Pregel job API and documentation:
  - Added a few useful attributes to Pregel HTTP API docs.
  - Added "parallelism" attribute to the result of Pregel job status responses,
    so that the effective parallelism is reported back.
  - Make sure "computationTime" in Pregel job status response does not
    underflow in case of errors.

* Prevent arangod from terminating with "terminate called without an active 
  exception" (SIGABRT) in case an out-of-memory exception occurs during 
  creating an ASIO socket connection.

* UI builds are now using the yarn package manager instead of the previously
  used node package manager.

* Fixed issue #13169: arangoimport tsv conversion of bools and null, although
  switched off by `--convert false`.

  Importing unquoted `null`, `false` and `true` literals from delimited files
  get imported as strings now if `convert` is explicitly turned off. It
  previously affected unquoted numbers only.

* Web UI: Highlight binary and hexadecimal integer literals in AQL queries.

* Fix BTS-350, BTS-358: Fixed potential startup errors due to global
  replication applier being started before end of database recovery procedure.
  Also fixed potential shut down errors due to global replication applier
  being shut down in parallel to a concurrent shut down attempt.

* Experimentally switch to wyhash (from xxhash) for velocypack. This is an
  experiment in devel to check if it produces any observable speedups.

* Updated ArangoDB Starter to 0.15.0.

* Remove deprecated HTTP REST API `/_api/export`. This API was deprecated
  in a previous version because it was not supported in clusters and was
  also covered completely by streaming AQL queries for the RocksDB storage
  engine.

* Added error handling for figures command in cluster. Previously errors
  returned by shards were ignored when aggregating the individual responses.
