@@ -110,8 +110,8 @@ class RocksDBCollection final : public RocksDBMetaCollection {
               IndexIterator::DocumentCallback const& cb) const override;
   
   /// @brief lookup with callback, not thread-safe on same transaction::Context
-  bool read(transaction::Methods* trx, LocalDocumentId const& token,
-            IndexIterator::DocumentCallback const& cb) const override;
+  Result read(transaction::Methods* trx, LocalDocumentId const& token,
+              IndexIterator::DocumentCallback const& cb) const override;
 
   bool readDocument(transaction::Methods* trx, LocalDocumentId const& token,
                     ManagedDocumentResult& result) const override;
@@ -183,11 +183,8 @@ class RocksDBCollection final : public RocksDBMetaCollection {
                                        rocksdb::PinnableSlice& ps,
                                        bool readCache,
                                        bool fillCache) const;
-  
-  bool lookupDocumentVPack(transaction::Methods*,
-                           LocalDocumentId const& documentId,
-                           IndexIterator::DocumentCallback const& cb,
-                           bool withCache) const;
+  Result lookupDocumentVPack(transaction::Methods*, LocalDocumentId const& documentId,
+                             IndexIterator::DocumentCallback const& cb, bool withCache) const;
 
   /// @brief create hash-cache
   void createCache() const;
