@@ -1245,7 +1245,7 @@ arangodb::Result PhysicalCollectionMock::read(arangodb::transaction::Methods*,
   return arangodb::Result(TRI_ERROR_ARANGO_DOCUMENT_NOT_FOUND);
 }
 
-bool PhysicalCollectionMock::read(
+arangodb::Result PhysicalCollectionMock::read(
     arangodb::transaction::Methods* trx, arangodb::LocalDocumentId const& token,
     arangodb::IndexIterator::DocumentCallback const& cb) const {
   before();
@@ -1253,10 +1253,10 @@ bool PhysicalCollectionMock::read(
     auto& doc = entry.second;
     if (doc.docId() == token) {
       cb(token, doc.data());
-      return true;
+      return arangodb::Result{};
     }
   }
-  return false;
+  return arangodb::Result{TRI_ERROR_ARANGO_DOCUMENT_NOT_FOUND};
 }
 
 bool PhysicalCollectionMock::readDocument(arangodb::transaction::Methods* trx,
