@@ -1,6 +1,9 @@
 devel
 -----
 
+* Removed assertion for success of a RocksDB function. Throw a proper 
+  exception instead.
+
 * Show peak memory usage in AQL query profiling output.
 
 * Micro improvements for Pregel job API and documentation:
